crates/gmsh/include/gmshc.h

#define GMSH_API_VERSION "4.13.1"
#define GMSH_API_VERSION_MAJOR 4
#define GMSH_API_VERSION_MINOR 13
#define GMSH_API_VERSION_PATCH 1
GMSH_API void gmshFree(void *p);
GMSH_API void *gmshMalloc(size_t n);
GMSH_API void gmshInitialize(int argc, char **argv,
                             const int readConfigFiles,
                             const int run,
                             int *ierr);
GMSH_API int gmshIsInitialized(int *ierr);
GMSH_API void gmshFinalize(int *ierr);
GMSH_API void gmshOpen(const char *fileName,
                       int *ierr);
GMSH_API void gmshMerge(const char *fileName,
                        int *ierr);
GMSH_API void gmshWrite(const char * fileName,
                        int * ierr);
GMSH_API void gmshClear(int * ierr);
GMSH_API void gmshOptionSetNumber(const char * name,
                                  const double value,
                                  int * ierr);
GMSH_API void gmshOptionGetNumber(const char * name,
                                  double * value,
                                  int * ierr);
GMSH_API void gmshOptionSetString(const char * name,
                                  const char * value,
                                  int * ierr);
GMSH_API void gmshOptionGetString(const char * name,
                                  char ** value,
                                  int * ierr);
GMSH_API void gmshOptionSetColor(const char * name,
                                 const int r,
                                 const int g,
                                 const int b,
                                 const int a,
                                 int *ierr);
GMSH_API void gmshOptionGetColor(const char * name,
                                 int * r,
                                 int * g,
                                 int * b,
                                 int * a,
                                 int * ierr);
GMSH_API void gmshOptionRestoreDefaults(int *ierr);
GMSH_API void gmshModelAdd(const char * name,
                           int * ierr);
GMSH_API void gmshModelRemove(int * ierr);
GMSH_API void gmshModelList(char *** names, size_t * names_n,
                            int * ierr);
GMSH_API void gmshModelGetCurrent(char ** name,
                                  int * ierr);
GMSH_API void gmshModelSetCurrent(const char * name,
                                  int * ierr);
GMSH_API void gmshModelGetFileName(char **fileName,
                                   int *ierr);
GMSH_API void gmshModelSetFileName(const char *fileName,
                                   int *ierr);
GMSH_API void gmshModelGetEntities(int **dimTags, size_t *dimTags_n,
                                   const int dim,
                                   int *ierr);
GMSH_API void gmshModelSetEntityName(const int dim,
                                     const int tag,
                                     const char *name,
                                     int *ierr);
GMSH_API void gmshModelGetEntityName(const int dim,
                                     const int tag,
                                     char **name,
                                     int *ierr);
GMSH_API void gmshModelRemoveEntityName(const char *name,
                                        int *ierr);
GMSH_API void gmshModelGetPhysicalGroups(int **dimTags, size_t *dimTags_n,
                                         const int dim,
                                         int *ierr);
GMSH_API void gmshModelGetEntitiesForPhysicalGroup(const int dim,
                                                   const int tag,
                                                   int **tags, size_t *tags_n,
                                                   int *ierr);
GMSH_API void gmshModelGetEntitiesForPhysicalName(const char *name,
                                                  int **dimTags, size_t *dimTags_n,
                                                  int *ierr);
GMSH_API void gmshModelGetPhysicalGroupsForEntity(const int dim,
                                                  const int tag,
                                                  int **physicalTags, size_t *physicalTags_n,
                                                  int *ierr);
GMSH_API int gmshModelAddPhysicalGroup(const int dim,
                                       const int *tags, const size_t tags_n,
                                       const int tag,
                                       const char *name,
                                       int *ierr);
GMSH_API void gmshModelRemovePhysicalGroups(const int *dimTags, const size_t dimTags_n,
                                            int *ierr);
GMSH_API void gmshModelSetPhysicalName(const int dim,
                                       const int tag,
                                       const char *name,
                                       int *ierr);
GMSH_API void gmshModelGetPhysicalName(const int dim,
                                       const int tag,
                                       char **name,
                                       int *ierr);
GMSH_API void gmshModelRemovePhysicalName(const char *name,
                                          int *ierr);
GMSH_API void gmshModelSetTag(const int dim,
                              const int tag,
                              const int newTag,
                              int *ierr);
GMSH_API void gmshModelGetBoundary(const int *dimTags, const size_t dimTags_n,
                                   int **outDimTags, size_t *outDimTags_n,
                                   const int combined,
                                   const int oriented,
                                   const int recursive,
                                   int *ierr);
GMSH_API void gmshModelGetAdjacencies(const int dim,
                                      const int tag,
                                      int **upward, size_t *upward_n,
                                      int **downward, size_t *downward_n,
                                      int *ierr);
GMSH_API void gmshModelGetEntitiesInBoundingBox(const double xmin,
                                                const double ymin,
                                                const double zmin,
                                                const double xmax,
                                                const double ymax,
                                                const double zmax,
                                                int **dimTags, size_t *dimTags_n,
                                                const int dim,
                                                int *ierr);
GMSH_API void gmshModelGetBoundingBox(const int dim,
                                      const int tag,
                                      double *xmin,
                                      double *ymin,
                                      double *zmin,
                                      double *xmax,
                                      double *ymax,
                                      double *zmax,
                                      int *ierr);
GMSH_API int gmshModelGetDimension(int *ierr);
GMSH_API int gmshModelAddDiscreteEntity(const int dim,
                                        const int tag,
                                        const int *boundary, const size_t boundary_n,
                                        int *ierr);
GMSH_API void gmshModelRemoveEntities(const int *dimTags, const size_t dimTags_n,
                                      const int recursive,
                                      int *ierr);
GMSH_API void gmshModelGetType(const int dim,
                               const int tag,
                               char **entityType,
                               int *ierr);
GMSH_API void gmshModelGetParent(const int dim,
                                 const int tag,
                                 int *parentDim,
                                 int *parentTag,
                                 int *ierr);
GMSH_API int gmshModelGetNumberOfPartitions(int *ierr);
GMSH_API void gmshModelGetPartitions(const int dim,
                                     const int tag,
                                     int **partitions, size_t *partitions_n,
                                     int *ierr);
GMSH_API void gmshModelGetValue(const int dim,
                                const int tag,
                                const double *parametricCoord, const size_t parametricCoord_n,
                                double **coord, size_t *coord_n,
                                int *ierr);
GMSH_API void gmshModelGetDerivative(const int dim,
                                     const int tag,
                                     const double *parametricCoord, const size_t parametricCoord_n,
                                     double **derivatives, size_t *derivatives_n,
                                     int *ierr);
GMSH_API void gmshModelGetSecondDerivative(const int dim,
                                           const int tag,
                                           const double *parametricCoord, const size_t parametricCoord_n,
                                           double **derivatives, size_t *derivatives_n,
                                           int *ierr);
GMSH_API void gmshModelGetCurvature(const int dim,
                                    const int tag,
                                    const double *parametricCoord, const size_t parametricCoord_n,
                                    double **curvatures, size_t *curvatures_n,
                                    int *ierr);
GMSH_API void gmshModelGetPrincipalCurvatures(const int tag,
                                              const double *parametricCoord, const size_t parametricCoord_n,
                                              double **curvatureMax, size_t *curvatureMax_n,
                                              double **curvatureMin, size_t *curvatureMin_n,
                                              double **directionMax, size_t *directionMax_n,
                                              double **directionMin, size_t *directionMin_n,
                                              int *ierr);
GMSH_API void gmshModelGetNormal(const int tag,
                                 const double *parametricCoord, const size_t parametricCoord_n,
                                 double **normals, size_t *normals_n,
                                 int *ierr);