crates/gmsh/src/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */
pub mod bindings {
pub const GMSH_API_VERSION: &[u8; 7] = b"4.13.1\0";
pub const GMSH_API_VERSION_MAJOR: u32 = 4;
pub const GMSH_API_VERSION_MINOR: u32 = 13;
pub const GMSH_API_VERSION_PATCH: u32 = 1;
pub type WcharT = ::std::os::raw::c_int;
pub type MaxAlignT = u128;
unsafe extern "C" {
    pub fn gmshFree(p: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn gmshMalloc(n: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn gmshInitialize(
        argc: ::std::os::raw::c_int,
        argv: *mut *mut ::std::os::raw::c_char,
        readConfigFiles: ::std::os::raw::c_int,
        run: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshIsInitialized(ierr: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshFinalize(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshOpen(fileName: *const ::std::os::raw::c_char, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshMerge(fileName: *const ::std::os::raw::c_char, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshWrite(fileName: *const ::std::os::raw::c_char, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshClear(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshOptionSetNumber(
        name: *const ::std::os::raw::c_char,
        value: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshOptionGetNumber(
        name: *const ::std::os::raw::c_char,
        value: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshOptionSetString(
        name: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshOptionGetString(
        name: *const ::std::os::raw::c_char,
        value: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshOptionSetColor(
        name: *const ::std::os::raw::c_char,
        r: ::std::os::raw::c_int,
        g: ::std::os::raw::c_int,
        b: ::std::os::raw::c_int,
        a: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshOptionGetColor(
        name: *const ::std::os::raw::c_char,
        r: *mut ::std::os::raw::c_int,
        g: *mut ::std::os::raw::c_int,
        b: *mut ::std::os::raw::c_int,
        a: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshOptionRestoreDefaults(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelAdd(name: *const ::std::os::raw::c_char, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelRemove(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelList(
        names: *mut *mut *mut ::std::os::raw::c_char,
        names_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetCurrent(
        name: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetCurrent(
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetFileName(
        fileName: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetFileName(
        fileName: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetEntities(
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetEntityName(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetEntityName(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        name: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelRemoveEntityName(
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetPhysicalGroups(
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetEntitiesForPhysicalGroup(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        tags: *mut *mut ::std::os::raw::c_int,
        tags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetEntitiesForPhysicalName(
        name: *const ::std::os::raw::c_char,
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetPhysicalGroupsForEntity(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        physicalTags: *mut *mut ::std::os::raw::c_int,
        physicalTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelAddPhysicalGroup(
        dim: ::std::os::raw::c_int,
        tags: *const ::std::os::raw::c_int,
        tags_n: usize,
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelRemovePhysicalGroups(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetPhysicalName(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetPhysicalName(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        name: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelRemovePhysicalName(
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetTag(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        newTag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetBoundary(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        combined: ::std::os::raw::c_int,
        oriented: ::std::os::raw::c_int,
        recursive: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetAdjacencies(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        upward: *mut *mut ::std::os::raw::c_int,
        upward_n: *mut usize,
        downward: *mut *mut ::std::os::raw::c_int,
        downward_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetEntitiesInBoundingBox(
        xmin: f64,
        ymin: f64,
        zmin: f64,
        xmax: f64,
        ymax: f64,
        zmax: f64,
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetBoundingBox(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        xmin: *mut f64,
        ymin: *mut f64,
        zmin: *mut f64,
        xmax: *mut f64,
        ymax: *mut f64,
        zmax: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetDimension(ierr: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelAddDiscreteEntity(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        boundary: *const ::std::os::raw::c_int,
        boundary_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelRemoveEntities(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        recursive: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetType(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        entityType: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetParent(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        parentDim: *mut ::std::os::raw::c_int,
        parentTag: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetNumberOfPartitions(
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGetPartitions(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        partitions: *mut *mut ::std::os::raw::c_int,
        partitions_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetValue(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetDerivative(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        derivatives: *mut *mut f64,
        derivatives_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetSecondDerivative(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        derivatives: *mut *mut f64,
        derivatives_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetCurvature(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        curvatures: *mut *mut f64,
        curvatures_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetPrincipalCurvatures(
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        curvatureMax: *mut *mut f64,
        curvatureMax_n: *mut usize,
        curvatureMin: *mut *mut f64,
        curvatureMin_n: *mut usize,
        directionMax: *mut *mut f64,
        directionMax_n: *mut usize,
        directionMin: *mut *mut f64,
        directionMin_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetNormal(
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        normals: *mut *mut f64,
        normals_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
